<resources>
    <string name="app_name">Github Commit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sha">SHA:</string>
    <string name="just_a_minute">Just a minute...</string>
    <string name="author">Author:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>
    <string name="number_of_files_changed">Number of files changed:</string>
    <string name="total_number_of_changes">Total number of changes:</string>
    <string name="an_error_occurred_while_loading_data">An error occurred while loading data</string>
</resources>