<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textJust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_a_minute"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAuthorDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        tools:text="textViewAuthorDetails"
        app:layout_constraintStart_toEndOf="@id/textAuthor"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorDetails" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp"
        tools:text="textViewDate"
        app:layout_constraintStart_toEndOf="@id/textDate"
        app:layout_constraintTop_toBottomOf="@id/textViewAuthorDetails"/>

    <TextView
        android:id="@+id/textSha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sha"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDate" />

    <TextView
        android:id="@+id/textViewSha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textSize="14sp"
        tools:text="textViewShatextViewShatextViewShatextViewShatextViewSha"
        app:layout_constraintStart_toEndOf="@id/textSha"
        app:layout_constraintTop_toBottomOf="@id/textViewDate"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSha" />

    <TextView
        android:id="@+id/textViewMessageDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/textMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSha"
        tools:text="textViewMessageDetails,textViewMessageDetails,textViewMessageDetails,textViewMessageDetails" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_files_changed"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageDetails" />

    <TextView
        android:id="@+id/textViewNumberFilesChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp"
        tools:text="textViewNumberFilesChanged"
        app:layout_constraintStart_toEndOf="@id/textNumber"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageDetails"/>

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_number_of_changes"
        android:visibility="gone"
        android:padding="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNumberFilesChanged" />

    <TextView
        android:id="@+id/textViewTotalChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="16sp"
        tools:text="textViewTotalChanges"
        app:layout_constraintStart_toEndOf="@id/textTotal"
        app:layout_constraintTop_toBottomOf="@id/textViewNumberFilesChanged"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>